--- a/src/frame/css/body/_variables.scss
+++ b/src/frame/css/body/_variables.scss
@@ -39,10 +39,10 @@ $table-color-complement: $primary-color;
 
 // ********************************************* COMPONENTS
 // ********************************************* TAB
-$tab-color: $primary-color;
-$tab-color-text: $black-1;
-$tab-color-border: $black-3;
-$tab-color-hover: $black-5;
+$tab-color: #282828;;
+$tab-color-text: #282828;
+$tab-color-border: #BCBCBC;
+$tab-color-hover: #FFFFFF;
 $tab-color-back: #FFFFFF;
 $tab-border-width: $border-width;
 $tab-border-radius: $border-radius;
